# mls_quickie

./: .gitignore  Report.ipynb  city_lat_long.html  city_lat_long.json  combine_data.py  index.html  lat_long.csv  mls_lat_long.csv  mls_no_to_study.txt  notes.md  pyproject.toml  sample.csv  script.py  top_20_clusters.json  top_50_clusters.json  top_50_clusters_first_pass.json
results/: 4_top_20_visualization.html  5_top_50_visualization.html  leaderboard.txt  mapComponent.js  markers.json  neighborhood_details.json  neighborhoods.json  price_spreads_top_50.json  summary.md
results/mls_data/: 1.csv  10.csv  11.csv  12.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  45.csv  46.csv  47.csv  (+8 more)
results_v0/: 5_top_20_visualization.html  6_top_50_visualization.html  leaderboard.txt
results_v0/mls_data/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  45.csv  46.csv  47.csv  (+8 more)
